--- a/example/styles.css
+++ b/example/styles.css
@@ -50,7 +50,10 @@ html {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	width: 10vw;
+	height: 10vw;
 	color: var(--primary-color);
 	background: var(--background-color);
-	box-shadow: 0px 0px 12px -6px var(--secondary-color);
+	box-shadow: 0px 3px 12px -6px var(--primary-color);
+	font-size: 2rem;
 }
